# automatic-bulk-email-sender

./: .env.example  .gitignore  ARCHITECTURE.md  INTEGRATION_EXAMPLE.md  QUICKSTART.md  README.md  TRACKING_GUIDE.md  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_tracking.py
autobulk/: __init__.py  __main__.py  cli.py  config.py  db.py  email.py  models.py  recipients.py  scheduler.py  worker.py
examples/: .env.example  recipients.json  sample_recipient.json  welcome.jinja2  welcome.text.jinja2  welcome.yaml
src/autobulk/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py  recipients_cli.py  sheets.py
src/email_sender/: __init__.py  cli.py  exceptions.py  models.py  sender.py  template.py  validators.py
src/email_sender/providers/: __init__.py  base.py  gmail.py  mock.py  sendgrid.py
tests/: __init__.py  conftest.py  test_models.py  test_sender.py  test_sheets.py  test_template.py  test_validators.py
tracking/: __init__.py  app.py  bounce_handler.py  cli.py  dashboard.py  database.py  server.py
