[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "automatic-bulk-email-sender"
version = "0.1.0"
description = "CLI and worker for scheduling bulk email jobs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Automatic Bulk Email" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "SQLAlchemy>=2.0.20",
    "APScheduler>=3.10.4",
    "python-dateutil>=2.8.2"
]

[project.scripts]
autobulk = "autobulk.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["autobulk*"]
